--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -141,10 +141,278 @@
           </item>
          </layout>
         </widget>
-        <widget class="QWidget" name="converter">
+        <widget class="QWidget" name="convert">
          <attribute name="title">
-          <string>Converter</string>
+          <string>Convert</string>
          </attribute>
+         <layout class="QGridLayout" name="gridLayout_33">
+          <item row="0" column="0">
+           <widget class="QLabel" name="converter_file_label">
+            <property name="maximumSize">
+             <size>
+              <width>100</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Select file</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QComboBox" name="converter_file_cbbx"/>
+          </item>
+          <item row="1" column="0" colspan="2">
+           <widget class="QGroupBox" name="converter_options_groupBox">
+            <property name="title">
+             <string>Options</string>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_34">
+             <item row="0" column="2">
+              <widget class="QComboBox" name="converter_data_type_comboBox">
+               <item>
+                <property name="text">
+                 <string>Same as source</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Byte</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Int8</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>UInt16</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Int16</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>UInt32</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Int32</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>UInt64</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Int64</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Float32</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Float64</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>CInt16</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>CInt32</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>CFloat32 </string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>CFloat64</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+             <item row="1" column="2">
+              <widget class="QComboBox" name="converter_resampling_comboBox">
+               <item>
+                <property name="text">
+                 <string>nearest (default)</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>bilinear</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>cubic</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>cubicspline</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>lanczos</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>average</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>rms</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>mode</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+             <item row="3" column="0" colspan="3">
+              <widget class="QCheckBox" name="converter_recalc_stat_checkBox">
+               <property name="text">
+                <string>Force recalculate statistics</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="0">
+              <widget class="QLabel" name="converter_data_type_label">
+               <property name="text">
+                <string>Profile</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="converter_resampling_label">
+               <property name="text">
+                <string>Resampling</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="0" colspan="3">
+              <widget class="QCheckBox" name="converter_strict_checkbox">
+               <property name="text">
+                <string>Strict</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="0">
+              <widget class="QLabel" name="converter_srs_label">
+               <property name="text">
+                <string>Override SRS</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="2">
+              <widget class="QLineEdit" name="converter_srs_lineEdit">
+               <property name="maxLength">
+                <number>327679999</number>
+               </property>
+               <property name="placeholderText">
+                <string>Same as source SRS</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item row="2" column="0" colspan="2">
+           <widget class="QGroupBox" name="converter_outpath_groupBox">
+            <property name="title">
+             <string>Output settings</string>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_35">
+             <item row="0" column="0">
+              <widget class="QLabel" name="converter_outpath_label">
+               <property name="text">
+                <string>Output path</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item row="4" column="0">
+           <spacer name="verticalSpacer_7">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="3" column="0" colspan="2">
+           <widget class="QFrame" name="frame_2">
+            <property name="frameShape">
+             <enum>QFrame::NoFrame</enum>
+            </property>
+            <property name="frameShadow">
+             <enum>QFrame::Raised</enum>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_36">
+             <item row="0" column="1">
+              <widget class="QPushButton" name="converter_save_btn">
+               <property name="minimumSize">
+                <size>
+                 <width>136</width>
+                 <height>22</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>136</width>
+                 <height>22</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Save</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="0">
+              <spacer name="horizontalSpacer_4">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
+           </widget>
+          </item>
+         </layout>
         </widget>
         <widget class="QWidget" name="clip">
          <attribute name="title">
@@ -363,80 +631,6 @@
                </property>
               </widget>
              </item>
-             <item row="4" column="1">
-              <widget class="QComboBox" name="transform_source_data_type_cbbx">
-               <item>
-                <property name="text">
-                 <string>Byte</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>Int8</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>UInt16</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>Int16</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>UInt32</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>Int32</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>UInt64</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>Int64</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>Float32</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>Float64</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>CInt16</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>CInt32</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>CFloat32 </string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>CFloat64</string>
-                </property>
-               </item>
-              </widget>
-             </item>
              <item row="7" column="1">
               <widget class="QComboBox" name="transform_resampling_cbbx">
                <item>
@@ -615,6 +809,80 @@
                <property name="text">
                 <string>Overwrite existing file?</string>
                </property>
+              </widget>
+             </item>
+             <item row="4" column="1">
+              <widget class="QComboBox" name="transform_source_data_type_cbbx">
+               <item>
+                <property name="text">
+                 <string>Byte</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Int8</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>UInt16</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Int16</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>UInt32</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Int32</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>UInt64</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Int64</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Float32</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Float64</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>CInt16</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>CInt32</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>CFloat32 </string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>CFloat64</string>
+                </property>
+               </item>
               </widget>
              </item>
             </layout>
@@ -1251,21 +1519,18 @@
           <string>Tiling</string>
          </attribute>
          <layout class="QGridLayout" name="gridLayout_7">
-          <item row="2" column="0" colspan="3">
-           <widget class="QGroupBox" name="tiling_outdir_groupBox">
-            <property name="title">
-             <string>Output settings</string>
+          <item row="4" column="2">
+           <spacer name="verticalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
             </property>
-            <layout class="QGridLayout" name="gridLayout_9">
-             <item row="0" column="0">
-              <widget class="QLabel" name="tiling_outdir_label">
-               <property name="text">
-                <string>Output directory</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
-           </widget>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>97</width>
+              <height>209</height>
+             </size>
+            </property>
+           </spacer>
           </item>
           <item row="1" column="0" colspan="3">
            <widget class="QGroupBox" name="tiling_options_groupBox">
@@ -1454,30 +1719,20 @@
             </layout>
            </widget>
           </item>
-          <item row="4" column="2">
-           <spacer name="verticalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
+          <item row="2" column="0" colspan="3">
+           <widget class="QGroupBox" name="tiling_outdir_groupBox">
+            <property name="title">
+             <string>Output settings</string>
             </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>97</width>
-              <height>209</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="3" column="2">
-           <widget class="QPushButton" name="tiling_save_btn">
-            <property name="maximumSize">
-             <size>
-              <width>136</width>
-              <height>22</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>Save</string>
-            </property>
+            <layout class="QGridLayout" name="gridLayout_9">
+             <item row="0" column="0">
+              <widget class="QLabel" name="tiling_outdir_label">
+               <property name="text">
+                <string>Output directory</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
           <item row="0" column="1" colspan="2">
@@ -1493,6 +1748,19 @@
             </property>
             <property name="text">
              <string>Select file</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="2">
+           <widget class="QPushButton" name="tiling_save_btn">
+            <property name="maximumSize">
+             <size>
+              <width>136</width>
+              <height>22</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Save</string>
             </property>
            </widget>
           </item>
