--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -97,7 +97,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Raster file paths:</string>
+            <string>Raster file</string>
            </property>
           </widget>
          </item>
@@ -2076,21 +2076,27 @@ self.information_file_webView.setUrl(QtCore.QUrl(codecs.decode( 'uggcf://fgernzn
         </property>
         <property name="font">
          <font>
-          <family>Samsung Sans</family>
-          <pointsize>-1</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
+          <family>Noto Sans Cond ExtBd</family>
+          <pointsize>14</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
+          <underline>false</underline>
+          <stylestrategy>PreferAntialias</stylestrategy>
+          <kerning>true</kerning>
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">color : white;	font-weight: bold;font-family: &quot;Samsung Sans&quot;;font-size: 14px; margin-left: 33px;
-</string>
+         <string notr="true">color : white;margin-left: 33px;</string>
         </property>
         <property name="lineWidth">
          <number>0</number>
         </property>
         <property name="text">
          <string>Geospatial Data Abstraction Library User Interface</string>
+        </property>
+        <property name="scaledContents">
+         <bool>false</bool>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
