--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -2219,7 +2219,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Noto Sans Cond ExtBd</family>
+          <family>Noto Sans ExtCond</family>
           <pointsize>14</pointsize>
           <weight>50</weight>
           <italic>false</italic>
@@ -2230,7 +2230,7 @@
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">color : white;margin-left: 33px; background: none;</string>
+         <string notr="true">color : white;margin-left: 33px; background: none; font-family: Noto Sans ExtCond;</string>
         </property>
         <property name="lineWidth">
          <number>0</number>
